# CaroOnline

./: q  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  appveyor.yml
Client/: CMakeLists.txt  Makefile
Client.Qt/: .gitignore  AppConfig.cpp  AppConfig.hpp  CaroOnlineQt.pro  GbButton.cpp  GbButton.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Minimax.cpp  Minimax.hpp
Client.WinForm/: CaroOnline.sln
Client.WinForm/CaroOnline/: CaroOnline.csproj  MainWindow.Designer.cs  MainWindow.cs  Program.cs
Client.WinForm/CaroOnline/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Client/app/: Config.hpp  Game.hpp  Kbhit.h  MoveManager.hpp  Object.hpp  Player.hpp  Point2D.hpp  Scene.hpp  WindowManager.h
Client/app/core/: Game.hpp
Client/app/input/: Kbhit.h  Kbhit.hpp
Client/app/objects/: Player.hpp  PlayerOnline.hpp
Client/app/scenes/: IntroScene.hpp  PlayOffline.hpp  PlayOfflineScene.hpp  PlayOnlineScene.hpp  PlayScene.hpp
Client/src/: Config.cpp  Game.cpp  Kbhit.cpp  MoveManager.cpp  Object.cpp  Player.cpp  Point2D.cpp  Scene.cpp  WindowManager.cpp  main.cpp
Client/src/core/: Game.cpp
Client/src/input/: Kbhit.cpp
Client/src/objects/: Player.cpp  PlayerOnline.cpp
Client/src/scenes/: IntroScene.cpp  PlayOfflineScene.cpp  PlayOnlineScene.cpp  PlayScene.cpp
Common/: Config.cpp  Config.hpp  GameBoard.cpp  GameBoard.hpp  Logger.cpp  Logger.hpp  MessageStruct.cpp  MessageStruct.hpp  Network.hpp  Point2D.cpp  Point2D.hpp  Type.hpp  Util.cpp  Util.hpp
Common/net/: Connection.cpp  Connection.hpp  Socket.cpp  Socket.hpp
Common/net/socket/: Udp.cpp  Udp.hpp
Lfs/libs/: WS2_32.Lib
Server/: CMakeLists.txt  Makefile  Server.pro
Server/app/: Config.hpp  Room.hpp  Server.hpp  Type.hpp
Server/src/: Room.cpp  Server.cpp  main.cpp
tests/: pingudp.py  udp_sv.cpp
